# directional_smoothness

./: README.md  pyproject.toml
sbatch_scripts/: gpu.sh
scripts/: compute_optimal_value_smoothness.py  distance_to_opt.py  make_figure_1.py  make_figure_3.py  make_figure_4.py
scripts/exp_configs/: initial_distances.pkl  uci.py  uci_constants.pkl
src/stepback/: base.py  metrics.py  utils.py
src/stepback/datasets/: uci.py
src/stepback/optim/: bb.py  dwod.py  implicit_ss.py  main.py  normalized_sgd.py  sps.py
